traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:22: error: ':' expected but ')' found.
def posSuivante(d) : Int = {
                 ^TraversalDiagonal:50: error: identifier expected but '}' found.
}
^